<resources>
    <string name="app_name">KostKater</string>
    <string name="title_home">Home</string>
    <string name="title_meal_plan">Meal Plan</string>
    <string name="logout">Keluar</string>

    <string name="set_preference">Ubah Preferensi</string>
    <string name="recommendation">Rekomendasi untukmu</string>
    <string name="regenerate">Regenerate</string>

    <string name="back">Kembali</string>

    <string name="detail">Detail</string>
    <string name="nutrition">Informasi Nutrisi</string>
    <string name="calorie">Kalori</string>
    <string name="carbo">Karbohidrat</string>
    <string name="protein">Protein</string>
    <string name="fat">Lemak</string>
    <string name="view_recipe">Lihat Resep</string>

    <string name="slogan">Nourish Your Budget,\nFuel Your Health.</string>
    <string name="login">Masuk</string>
    <string name="register">Daftar</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Konfirmasi password</string>

    <string name="recipe">Resep</string>
    <string name="ingredients">Bahan-bahan</string>
    <string name="instructions">Instruksi</string>

    <string name="save">Simpan</string>

    <string name="price">Harga</string>
    <string name="welcome_back">Selamat datang kembali!</string>
    <string name="welcome">Selamat datang!</string>

    <string name="try_again">Coba lagi</string>
    <string name="next">Lanjut</string>
    <string name="required">Wajib diisi</string>
    <string name="not_matched">Konfirmasi password tidak cocok</string>

    <string name="tips">Temukan rekomendasi makanan sesuai dengan preferensimu!</string>
    <string name="cancel">Batal</string>
    <string name="logout_confirm">Logout</string>
    <string name="logout_confirm_desc">"Yakin ingin keluar?"</string>

    <string name="what_to_eat">Mau makan apa\nhari ini?</string>
    <string name="ingredient">Bahan makanan</string>

    <string name="all_meals">Eksplor lebih banyak menu</string>
    <string name="allergy">Alergi</string>
    <string name="egg">Telur</string>
    <string name="peanut">Kacang</string>
    <string name="soybean">Kedelai</string>
    <string name="seafood">Seafood</string>
    <string name="shrimp">Udang</string>
    <string name="milk">Susu</string>
    <string name="wheat">Gandum</string>
    <string name="halal">Halal</string>
    <string name="session">Yah, sesi kamu telah berakhir. Coba login lagi, ya!</string>
    <string name="rec_not_found">Kami belum menemukan rekomendasi yang sesuai untukmu. Tapi kamu bisa coba gunakan preferensi yang lain, ya!</string>
    <string name="meal_plan">Meal Plan</string>
    <string name="breakfast">Sarapan</string>
    <string name="lunch">Makan siang</string>
    <string name="dinner">Makan malam</string>
    <string name="no_meal_plan">Belum ada meal plan</string>
    <string name="add_mealplan">Tambah ke Meal Plan</string>
    <string name="limit">* Kamu hanya bisa menjadwalkan meal plan untuk 7 hari ke depan</string>
    <string name="ingredients_tips">* Untuk lebih dari satu bahan, pisahkan dengan tanda koma\nContoh: Ayam, bawang</string>
</resources>