<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".ui.addplan.AddPlanSheet">

    <View
        android:id="@+id/line"
        android:layout_width="60dp"
        android:layout_height="4dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@color/hunter_green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/activity_margin"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:text="@string/add_mealplan"
        android:textColor="@color/hunter_green"
        android:textSize="@dimen/font_l"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="@dimen/activity_margin"
        android:text="@string/limit" />

    <DatePicker
        android:id="@+id/date_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:calendarViewShown="false"
        android:datePickerMode="spinner" />

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/activity_margin">

        <TextView
            android:id="@+id/tv_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Jadwalkan untuk"
            android:textColor="@color/eerie_black"
            android:textSize="@dimen/font_s"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/rb_breakfast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/hunter_green"
            android:checked="true"
            android:paddingHorizontal="7dp"
            android:text="@string/breakfast" />

        <RadioButton
            android:id="@+id/rb_lunch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/hunter_green"
            android:paddingHorizontal="7dp"
            android:text="@string/lunch" />

        <RadioButton
            android:id="@+id/rb_dinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/hunter_green"
            android:paddingHorizontal="7dp"
            android:text="@string/dinner" />
    </RadioGroup>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_margin">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/save_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/hunter_green"
            android:paddingVertical="12dp"
            android:text="@string/save"
            android:textSize="@dimen/font_s"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/RoundedSquare" />

        <ProgressBar
            android:id="@+id/progress_bar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="10dp"
            android:indeterminateTint="@color/selective_yellow"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@id/save_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/save_button"
            tools:visibility="visible" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>