<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".ui.preference.PreferenceSheet">

    <View
        android:id="@+id/line"
        android:layout_width="60dp"
        android:layout_height="4dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@color/hunter_green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/activity_margin"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:text="@string/set_preference"
        android:textColor="@color/hunter_green"
        android:textSize="@dimen/font_l"
        android:textStyle="bold" />

    <Switch
        android:id="@+id/switch_halal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/activity_margin"
        android:layout_marginVertical="6dp"
        android:switchPadding="10dp"
        android:text="@string/halal"
        android:textColor="@color/eerie_black"
        android:textSize="@dimen/font_s"
        android:textStyle="bold"
        android:theme="@style/SCBSwitch" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/activity_margin"
        android:layout_marginVertical="6dp"
        android:text="@string/allergy"
        android:textColor="@color/eerie_black"
        android:textSize="@dimen/font_s"
        android:textStyle="bold" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/activity_margin">

        <ProgressBar
            android:id="@+id/progress_bar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="10dp"
            android:indeterminateTint="@color/selective_yellow"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

        <CheckBox
            android:id="@+id/checkbox_egg"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:buttonTint="@color/hunter_green"
            android:padding="7dp"
            android:text="@string/egg"
            android:textSize="@dimen/font_xs"
            app:layout_constraintEnd_toStartOf="@id/checkbox_peanut"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <CheckBox
            android:id="@+id/checkbox_peanut"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:buttonTint="@color/hunter_green"
            android:padding="7dp"
            android:text="@string/peanut"
            android:textSize="@dimen/font_xs"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/checkbox_egg"
            app:layout_constraintTop_toTopOf="parent" />

        <CheckBox
            android:id="@+id/checkbox_soybean"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:buttonTint="@color/hunter_green"
            android:padding="7dp"
            android:text="@string/soybean"
            android:textSize="@dimen/font_xs"
            app:layout_constraintEnd_toStartOf="@id/checkbox_seafood"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/checkbox_egg" />

        <CheckBox
            android:id="@+id/checkbox_seafood"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:buttonTint="@color/hunter_green"
            android:padding="7dp"
            android:text="@string/seafood"
            android:textSize="@dimen/font_xs"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/checkbox_soybean"
            app:layout_constraintTop_toBottomOf="@id/checkbox_peanut" />

        <CheckBox
            android:id="@+id/checkbox_shrimp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:buttonTint="@color/hunter_green"
            android:padding="7dp"
            android:text="@string/shrimp"
            android:textSize="@dimen/font_xs"
            app:layout_constraintEnd_toStartOf="@id/checkbox_milk"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/checkbox_soybean" />

        <CheckBox
            android:id="@+id/checkbox_milk"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:buttonTint="@color/hunter_green"
            android:padding="7dp"
            android:text="@string/milk"
            android:textSize="@dimen/font_xs"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/checkbox_shrimp"
            app:layout_constraintTop_toBottomOf="@id/checkbox_seafood" />

        <CheckBox
            android:id="@+id/checkbox_wheat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/hunter_green"
            android:padding="7dp"
            android:text="@string/wheat"
            android:textSize="@dimen/font_xs"
            app:layout_constraintTop_toBottomOf="@id/checkbox_shrimp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/activity_margin"
        android:layout_marginVertical="6dp"
        android:text="@string/price"
        android:textColor="@color/eerie_black"
        android:textSize="@dimen/font_s"
        android:textStyle="bold" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="@dimen/activity_margin">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/min_price_text_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="10dp"
            app:layout_constraintEnd_toStartOf="@id/dash"
            app:layout_constraintStart_toStartOf="parent"
            app:startIconDrawable="@drawable/rupiah_sign_16">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_min_price"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:digits="0,1,2,3,4,5,6,7,8,9"
                android:hint="Minimal"
                android:inputType="numberDecimal" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/dash"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="-"
            android:textColor="@color/eerie_black"
            android:textSize="36dp"
            app:layout_constraintEnd_toEndOf="@id/guidelineVertical"
            app:layout_constraintStart_toStartOf="@id/guidelineVertical" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/max_price_text_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/dash"
            app:startIconDrawable="@drawable/rupiah_sign_16">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_max_price"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:digits="0,1,2,3,4,5,6,7,8,9"
                android:hint="Maksimal"
                android:inputType="numberDecimal" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineVertical"
            android:layout_width="wrap_content"
            android:layout_height="64dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintGuide_percent="0.5"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/activity_margin"
        android:layout_marginVertical="6dp"
        android:text="@string/ingredient"
        android:textColor="@color/eerie_black"
        android:textSize="@dimen/font_s"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/activity_margin">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_ingredient"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="start|top"
            android:inputType="textMultiLine" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="@dimen/activity_margin"
        android:text="@string/ingredients_tips"
        android:textSize="12sp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_margin">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/save_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/hunter_green"
            android:paddingVertical="12dp"
            android:text="@string/save"
            android:textSize="@dimen/font_s"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/RoundedSquare" />

        <ProgressBar
            android:id="@+id/progress_bar2"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="10dp"
            android:indeterminateTint="@color/selective_yellow"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@id/save_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/save_button"
            tools:visibility="visible" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>