<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_margin">

        <TextView
            android:id="@+id/tv_greetings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/tv_banner"
            android:elevation="10dp"
            android:textColor="@color/white"
            android:layout_marginHorizontal="30dp"
            android:textSize="@dimen/font_xl"
            android:textStyle="bold"
            tools:text="Selamat pagi."/>

        <TextView
            android:id="@+id/tv_banner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/iv_banner"
            app:layout_constraintBottom_toBottomOf="@id/iv_banner"
            android:elevation="10dp"
            android:textColor="@color/white"
            android:layout_marginHorizontal="30dp"
            android:textSize="32dp"
            android:textStyle="bold"
            android:text="@string/what_to_eat"/>

        <ImageView
            android:id="@+id/iv_banner"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            app:layout_constraintDimensionRatio="H,4:3"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/banner"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="@id/iv_banner"
            app:layout_constraintBottom_toBottomOf="@id/iv_banner"
            android:background="@color/black"
            android:alpha="0.5"
            android:elevation="1dp" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_tips"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/iv_banner"
            android:layout_marginTop="-50dp"
            android:layout_marginHorizontal="@dimen/activity_margin"
            app:cardCornerRadius="15dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="14dp"
                android:background="@color/hunter_green">

                <androidx.cardview.widget.CardView
                    android:id="@+id/spark_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/tv_tips"
                    app:cardCornerRadius="15dp">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/black"
                        android:alpha="0.85"
                        android:padding="22dp">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:src="@drawable/sparkles_24"
                            android:elevation="10dp" />
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/tv_tips"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toEndOf="@id/spark_icon"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:textColor="@color/white"
                    android:textSize="@dimen/font_xs"
                    android:text="@string/tips"
                    android:layout_marginLeft="14dp"/>

                <TextView
                    android:id="@+id/tv_preference"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toEndOf="@id/spark_icon"
                    app:layout_constraintTop_toBottomOf="@id/tv_tips"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginLeft="14dp"
                    android:textColor="@color/selective_yellow"
                    android:textSize="@dimen/font_xs"
                    android:drawableRight="@drawable/baseline_arrow_right_alt_24"
                    android:text="@string/set_preference"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/text_recommendation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/cv_tips"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/regenerate_button"
            android:layout_marginTop="22dp"
            android:textSize="@dimen/font_m"
            android:textStyle="bold"
            android:textColor="@color/eerie_black"
            android:text="@string/recommendation"
            android:layout_marginHorizontal="32dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/regenerate_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/regenerate"
            android:textAllCaps="false"
            android:textSize="@dimen/font_s"
            app:strokeWidth="0dp"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_marginTop="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cv_tips"
            android:drawableLeft="@drawable/refresh_18"
            android:textColor="@color/gray"
            app:shapeAppearanceOverlay="@style/RoundedSquare"
            android:layout_marginHorizontal="@dimen/activity_margin"/>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_recommendation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/text_recommendation"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="@dimen/activity_margin"/>

        <ProgressBar
            android:id="@+id/progress_bar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="10dp"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/text_recommendation"
            app:layout_constraintBottom_toBottomOf="@id/rv_recommendation"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/text_all_meals"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/rv_recommendation"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="22dp"
            android:textSize="@dimen/font_m"
            android:textStyle="bold"
            android:textColor="@color/eerie_black"
            android:text="@string/all_meals"
            android:layout_marginHorizontal="32dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_all_meals"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/text_all_meals"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="@dimen/activity_margin"/>

        <ProgressBar
            android:id="@+id/progress_bar2"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="10dp"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/text_all_meals"
            app:layout_constraintBottom_toBottomOf="@id/rv_all_meals"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:visibility="visible" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_vertical"
            android:layout_width="wrap_content"
            android:layout_height="64dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintGuide_percent="0.5"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>